--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,9 @@
     <version>1.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>thymeleaf-bean</name>
+    <name>generic-bean-tests</name>
     <description>Any properties of an object are automatically added as attributes.</description>
-    <url>http://connect-group.github.io/thymeleaf-bean/</url>
+    <url>http://connect-group.github.io/generic-bean-tests/</url>
 
     <licenses>
         <license>
